--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+	<main>
+		<div class="color">#0ff</div>
+		<div class="color">#0dd</div>
+		<div class="color">#0aa</div>
+		<div class="color">#088</div>
+		<div class="color">#066</div>
+	</main>
 
 </body>
 
