Columnas, colores y texto alineado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ES">
 
 <head>
 	<meta charset="UTF-8">
@@ -11,11 +11,21 @@
 
 <body>
 	<main>
-		<div class="color">#0ff</div>
-		<div class="color">#0dd</div>
-		<div class="color">#0aa</div>
-		<div class="color">#088</div>
-		<div class="color">#066</div>
+		<div class="color">
+			<p>#0ff</p>
+		</div>
+		<div class="color">
+			<p>#0dd</p>
+		</div>
+		<div class="color">
+			<p>#0aa</p>
+		</div>
+		<div class="color">
+			<p>#088</p>
+		</div>
+		<div class="color">
+			<p>#066</p>
+		</div>
 	</main>
 
 </body>
